# soniox-cli

./: .gitignore  README.md  install.sh  pyproject.toml
src/soniox_cli/: cache.py  client.py  commands.py  config.py  files.py  main.py  render.py  settings.py  spinner.py  transcribe.py  transcriptions.py  util.py
